K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  labels:
    app: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - image: nitheesh86/nodejs
        name: nodejs
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
          name: endpoint
